Bugfix: Problem with collapsed Tracker values in some tables
Example fixed page: https://redmine.dev.ftmc.cz/custom_fields/2/edit

--- a/less/application.less
+++ b/less/application.less
@@ -64,13 +64,15 @@ h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 { border-bottom: 0px; }
 	position: relative;
 }
 
-.tabular p {
-	padding-left: 105px;
-}
+.tabular #all_attributes {
+	p {
+		padding-left: 105px;
+	}
 
-.tabular label {
-	margin-left: -105px;
-	width: 100px;
+	label {
+		margin-left: -105px;
+		width: 100px;
+	}
 }
 form .attributes select {
 	width: 90%;
@@ -81,6 +83,7 @@ form {
 		border: 0;
 		background: #f8f8f8;
 		padding: 10px;
+		margin-top: 5px;
 
 		legend {
 			background: #eee;
